Project 3/parser.output
Grammar

    0 $accept: Start $end

    1 Start: Class Start
    2      | Class

    3 Class: T_NAME T_COLON T_NAME T_OPEN_BRACE Members Methods T_CLOSE_BRACE
    4      | T_NAME T_OPEN_BRACE Members Methods T_CLOSE_BRACE

    5 Members: Members Type T_NAME
    6        | /* empty */

    7 Methods: T_NAME T_OPEN_PAR Arguments T_CLOSED_PAR T_COLON Type T_OPEN_BRACE Body T_CLOSE_BRACE Methods
    8        | /* empty */

    9 Arguments: Type T_NAME T_COMMA Arguments_2
   10          | Type T_NAME
   11          | /* empty */

   12 Arguments_2: Type T_NAME T_COMMA Arguments_2
   13            | Type T_NAME

   14 Body: Declarations Statements Return

   15 Declarations: Declarations Declaration
   16             | /* empty */

   17 Declaration: Type T_NAME Declaration_2

   18 Declaration_2: T_COMMA T_NAME Declaration_2
   19              | /* empty */

   20 Return: T_RETURN Expression
   21       | /* empty */

   22 Statements: Assignment Statements
   23           | MethodCall Statements
   24           | IfElse Statements
   25           | ForLoop Statements
   26           | Print Statements
   27           | /* empty */

   28 Statements_2: Assignment Statements
   29             | MethodCall Statements
   30             | IfElse Statements
   31             | ForLoop Statements
   32             | Print Statements

   33 Assignment: T_NAME T_EQUAL Expression

   34 MethodCall: T_NAME T_OPEN_PAR Parameters T_CLOSED_PAR
   35           | T_NAME T_PERIOD T_NAME T_OPEN_PAR Parameters T_CLOSED_PAR

   36 IfElse: T_IF Expression T_OPEN_BRACE Statements_2 T_CLOSE_BRACE
   37       | T_IF Expression T_OPEN_BRACE Statements_2 T_CLOSE_BRACE T_ELSE T_OPEN_BRACE Statements_2 T_CLOSE_BRACE

   38 ForLoop: T_FOR Assignment T_SEMICOLON Expression T_SEMICOLON Assignment T_OPEN_BRACE Statements T_CLOSE_BRACE

   39 Print: T_PRINT Expression

   40 Expression: Expression T_PLUS Expression
   41           | Expression T_MINUS Expression
   42           | Expression T_MULTIPLY Expression
   43           | Expression T_DIVIDE Expression
   44           | Expression T_LESS Expression
   45           | Expression T_LESS_EQUAL Expression
   46           | Expression T_EQUIVALENT Expression
   47           | Expression T_AND Expression
   48           | Expression T_OR Expression
   49           | T_NOT Expression
   50           | T_MINUS Expression
   51           | T_NAME
   52           | T_NAME T_PERIOD T_NAME
   53           | MethodCall
   54           | T_OPEN_PAR Expression T_CLOSED_PAR
   55           | T_INTEGER
   56           | T_TRUE
   57           | T_FALSE
   58           | T_NEW T_NAME
   59           | T_NEW T_NAME T_OPEN_PAR Parameters T_CLOSED_PAR

   60 Parameters: Parameters_2
   61           | /* empty */

   62 Parameters_2: Parameters_2 T_COMMA Expression
   63             | Expression

   64 Type: T_INT
   65     | T_BOOL
   66     | T_NAME
   67     | T_NONE


Terminals, with rules where they appear

$end (0) 0
error (256)
T_OR (258) 48
T_AND (259) 47
T_EQUIVALENT (260) 46
T_LESS_EQUAL (261) 45
T_LESS (262) 44
T_MINUS (263) 41 50
T_PLUS (264) 40
T_DIVIDE (265) 43
T_MULTIPLY (266) 42
T_NOT (267) 49
T_CLOSED_PAR (268) 7 34 35 54 59
T_OPEN_PAR (269) 7 34 35 54 59
T_INTEGER (270) 55
T_TRUE (271) 56
T_FALSE (272) 57
T_SEMICOLON (273) 38
T_PRINT (274) 39
T_RETURN (275) 20
T_IF (276) 36 37
T_ELSE (277) 37
T_FOR (278) 38
T_NEW (279) 58 59
T_INT (280) 64
T_BOOL (281) 65
T_NONE (282) 67
T_OPEN_BRACE (283) 3 4 7 36 37 38
T_CLOSE_BRACE (284) 3 4 7 36 37 38
T_COLON (285) 3 7
T_EQUAL (286) 33
T_NAME (287) 3 4 5 7 9 10 12 13 17 18 33 34 35 51 52 58 59 66
T_PERIOD (288) 35 52
T_COMMA (289) 9 12 18 62


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
Start (36)
    on left: 1 2, on right: 0 1
Class (37)
    on left: 3 4, on right: 1 2
Members (38)
    on left: 5 6, on right: 3 4 5
Methods (39)
    on left: 7 8, on right: 3 4 7
Arguments (40)
    on left: 9 10 11, on right: 7
Arguments_2 (41)
    on left: 12 13, on right: 9 12
Body (42)
    on left: 14, on right: 7
Declarations (43)
    on left: 15 16, on right: 14 15
Declaration (44)
    on left: 17, on right: 15
Declaration_2 (45)
    on left: 18 19, on right: 17 18
Return (46)
    on left: 20 21, on right: 14
Statements (47)
    on left: 22 23 24 25 26 27, on right: 14 22 23 24 25 26 28 29 30
    31 32 38
Statements_2 (48)
    on left: 28 29 30 31 32, on right: 36 37
Assignment (49)
    on left: 33, on right: 22 28 38
MethodCall (50)
    on left: 34 35, on right: 23 29 53
IfElse (51)
    on left: 36 37, on right: 24 30
ForLoop (52)
    on left: 38, on right: 25 31
Print (53)
    on left: 39, on right: 26 32
Expression (54)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59, on right: 20 33 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 54 62 63
Parameters (55)
    on left: 60 61, on right: 34 35 59
Parameters_2 (56)
    on left: 62 63, on right: 60 62
Type (57)
    on left: 64 65 66 67, on right: 5 7 9 10 12 13 17


State 0

    0 $accept: . Start $end

    T_NAME  shift, and go to state 1

    Start  go to state 2
    Class  go to state 3


State 1

    3 Class: T_NAME . T_COLON T_NAME T_OPEN_BRACE Members Methods T_CLOSE_BRACE
    4      | T_NAME . T_OPEN_BRACE Members Methods T_CLOSE_BRACE

    T_OPEN_BRACE  shift, and go to state 4
    T_COLON       shift, and go to state 5


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 6


State 3

    1 Start: Class . Start
    2      | Class .

    T_NAME  shift, and go to state 1

    $default  reduce using rule 2 (Start)

    Start  go to state 7
    Class  go to state 3


State 4

    4 Class: T_NAME T_OPEN_BRACE . Members Methods T_CLOSE_BRACE

    $default  reduce using rule 6 (Members)

    Members  go to state 8


State 5

    3 Class: T_NAME T_COLON . T_NAME T_OPEN_BRACE Members Methods T_CLOSE_BRACE

    T_NAME  shift, and go to state 9


State 6

    0 $accept: Start $end .

    $default  accept


State 7

    1 Start: Class Start .

    $default  reduce using rule 1 (Start)


State 8

    4 Class: T_NAME T_OPEN_BRACE Members . Methods T_CLOSE_BRACE
    5 Members: Members . Type T_NAME

    T_INT   shift, and go to state 10
    T_BOOL  shift, and go to state 11
    T_NONE  shift, and go to state 12
    T_NAME  shift, and go to state 13

    $default  reduce using rule 8 (Methods)

    Methods  go to state 14
    Type     go to state 15


State 9

    3 Class: T_NAME T_COLON T_NAME . T_OPEN_BRACE Members Methods T_CLOSE_BRACE

    T_OPEN_BRACE  shift, and go to state 16


State 10

   64 Type: T_INT .

    $default  reduce using rule 64 (Type)


State 11

   65 Type: T_BOOL .

    $default  reduce using rule 65 (Type)


State 12

   67 Type: T_NONE .

    $default  reduce using rule 67 (Type)


State 13

    7 Methods: T_NAME . T_OPEN_PAR Arguments T_CLOSED_PAR T_COLON Type T_OPEN_BRACE Body T_CLOSE_BRACE Methods
   66 Type: T_NAME .

    T_OPEN_PAR  shift, and go to state 17

    $default  reduce using rule 66 (Type)


State 14

    4 Class: T_NAME T_OPEN_BRACE Members Methods . T_CLOSE_BRACE

    T_CLOSE_BRACE  shift, and go to state 18


State 15

    5 Members: Members Type . T_NAME

    T_NAME  shift, and go to state 19


State 16

    3 Class: T_NAME T_COLON T_NAME T_OPEN_BRACE . Members Methods T_CLOSE_BRACE

    $default  reduce using rule 6 (Members)

    Members  go to state 20


State 17

    7 Methods: T_NAME T_OPEN_PAR . Arguments T_CLOSED_PAR T_COLON Type T_OPEN_BRACE Body T_CLOSE_BRACE Methods

    T_INT   shift, and go to state 10
    T_BOOL  shift, and go to state 11
    T_NONE  shift, and go to state 12
    T_NAME  shift, and go to state 21

    $default  reduce using rule 11 (Arguments)

    Arguments  go to state 22
    Type       go to state 23


State 18

    4 Class: T_NAME T_OPEN_BRACE Members Methods T_CLOSE_BRACE .

    $default  reduce using rule 4 (Class)


State 19

    5 Members: Members Type T_NAME .

    $default  reduce using rule 5 (Members)


State 20

    3 Class: T_NAME T_COLON T_NAME T_OPEN_BRACE Members . Methods T_CLOSE_BRACE
    5 Members: Members . Type T_NAME

    T_INT   shift, and go to state 10
    T_BOOL  shift, and go to state 11
    T_NONE  shift, and go to state 12
    T_NAME  shift, and go to state 13

    $default  reduce using rule 8 (Methods)

    Methods  go to state 24
    Type     go to state 15


State 21

   66 Type: T_NAME .

    $default  reduce using rule 66 (Type)


State 22

    7 Methods: T_NAME T_OPEN_PAR Arguments . T_CLOSED_PAR T_COLON Type T_OPEN_BRACE Body T_CLOSE_BRACE Methods

    T_CLOSED_PAR  shift, and go to state 25


State 23

    9 Arguments: Type . T_NAME T_COMMA Arguments_2
   10          | Type . T_NAME

    T_NAME  shift, and go to state 26


State 24

    3 Class: T_NAME T_COLON T_NAME T_OPEN_BRACE Members Methods . T_CLOSE_BRACE

    T_CLOSE_BRACE  shift, and go to state 27


State 25

    7 Methods: T_NAME T_OPEN_PAR Arguments T_CLOSED_PAR . T_COLON Type T_OPEN_BRACE Body T_CLOSE_BRACE Methods

    T_COLON  shift, and go to state 28


State 26

    9 Arguments: Type T_NAME . T_COMMA Arguments_2
   10          | Type T_NAME .

    T_COMMA  shift, and go to state 29

    $default  reduce using rule 10 (Arguments)


State 27

    3 Class: T_NAME T_COLON T_NAME T_OPEN_BRACE Members Methods T_CLOSE_BRACE .

    $default  reduce using rule 3 (Class)


State 28

    7 Methods: T_NAME T_OPEN_PAR Arguments T_CLOSED_PAR T_COLON . Type T_OPEN_BRACE Body T_CLOSE_BRACE Methods

    T_INT   shift, and go to state 10
    T_BOOL  shift, and go to state 11
    T_NONE  shift, and go to state 12
    T_NAME  shift, and go to state 21

    Type  go to state 30


State 29

    9 Arguments: Type T_NAME T_COMMA . Arguments_2

    T_INT   shift, and go to state 10
    T_BOOL  shift, and go to state 11
    T_NONE  shift, and go to state 12
    T_NAME  shift, and go to state 21

    Arguments_2  go to state 31
    Type         go to state 32


State 30

    7 Methods: T_NAME T_OPEN_PAR Arguments T_CLOSED_PAR T_COLON Type . T_OPEN_BRACE Body T_CLOSE_BRACE Methods

    T_OPEN_BRACE  shift, and go to state 33


State 31

    9 Arguments: Type T_NAME T_COMMA Arguments_2 .

    $default  reduce using rule 9 (Arguments)


State 32

   12 Arguments_2: Type . T_NAME T_COMMA Arguments_2
   13            | Type . T_NAME

    T_NAME  shift, and go to state 34


State 33

    7 Methods: T_NAME T_OPEN_PAR Arguments T_CLOSED_PAR T_COLON Type T_OPEN_BRACE . Body T_CLOSE_BRACE Methods

    $default  reduce using rule 16 (Declarations)

    Body          go to state 35
    Declarations  go to state 36


State 34

   12 Arguments_2: Type T_NAME . T_COMMA Arguments_2
   13            | Type T_NAME .

    T_COMMA  shift, and go to state 37

    $default  reduce using rule 13 (Arguments_2)


State 35

    7 Methods: T_NAME T_OPEN_PAR Arguments T_CLOSED_PAR T_COLON Type T_OPEN_BRACE Body . T_CLOSE_BRACE Methods

    T_CLOSE_BRACE  shift, and go to state 38


State 36

   14 Body: Declarations . Statements Return
   15 Declarations: Declarations . Declaration

    T_PRINT  shift, and go to state 39
    T_IF     shift, and go to state 40
    T_FOR    shift, and go to state 41
    T_INT    shift, and go to state 10
    T_BOOL   shift, and go to state 11
    T_NONE   shift, and go to state 12
    T_NAME   shift, and go to state 42

    $default  reduce using rule 27 (Statements)

    Declaration  go to state 43
    Statements   go to state 44
    Assignment   go to state 45
    MethodCall   go to state 46
    IfElse       go to state 47
    ForLoop      go to state 48
    Print        go to state 49
    Type         go to state 50


State 37

   12 Arguments_2: Type T_NAME T_COMMA . Arguments_2

    T_INT   shift, and go to state 10
    T_BOOL  shift, and go to state 11
    T_NONE  shift, and go to state 12
    T_NAME  shift, and go to state 21

    Arguments_2  go to state 51
    Type         go to state 32


State 38

    7 Methods: T_NAME T_OPEN_PAR Arguments T_CLOSED_PAR T_COLON Type T_OPEN_BRACE Body T_CLOSE_BRACE . Methods

    T_NAME  shift, and go to state 52

    $default  reduce using rule 8 (Methods)

    Methods  go to state 53


State 39

   39 Print: T_PRINT . Expression

    T_MINUS     shift, and go to state 54
    T_NOT       shift, and go to state 55
    T_OPEN_PAR  shift, and go to state 56
    T_INTEGER   shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_NEW       shift, and go to state 60
    T_NAME      shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 63


State 40

   36 IfElse: T_IF . Expression T_OPEN_BRACE Statements_2 T_CLOSE_BRACE
   37       | T_IF . Expression T_OPEN_BRACE Statements_2 T_CLOSE_BRACE T_ELSE T_OPEN_BRACE Statements_2 T_CLOSE_BRACE

    T_MINUS     shift, and go to state 54
    T_NOT       shift, and go to state 55
    T_OPEN_PAR  shift, and go to state 56
    T_INTEGER   shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_NEW       shift, and go to state 60
    T_NAME      shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 64


State 41

   38 ForLoop: T_FOR . Assignment T_SEMICOLON Expression T_SEMICOLON Assignment T_OPEN_BRACE Statements T_CLOSE_BRACE

    T_NAME  shift, and go to state 65

    Assignment  go to state 66


State 42

   33 Assignment: T_NAME . T_EQUAL Expression
   34 MethodCall: T_NAME . T_OPEN_PAR Parameters T_CLOSED_PAR
   35           | T_NAME . T_PERIOD T_NAME T_OPEN_PAR Parameters T_CLOSED_PAR
   66 Type: T_NAME .

    T_OPEN_PAR  shift, and go to state 67
    T_EQUAL     shift, and go to state 68
    T_PERIOD    shift, and go to state 69

    $default  reduce using rule 66 (Type)


State 43

   15 Declarations: Declarations Declaration .

    $default  reduce using rule 15 (Declarations)


State 44

   14 Body: Declarations Statements . Return

    T_RETURN  shift, and go to state 70

    $default  reduce using rule 21 (Return)

    Return  go to state 71


State 45

   22 Statements: Assignment . Statements

    T_PRINT  shift, and go to state 39
    T_IF     shift, and go to state 40
    T_FOR    shift, and go to state 41
    T_NAME   shift, and go to state 72

    $default  reduce using rule 27 (Statements)

    Statements  go to state 73
    Assignment  go to state 45
    MethodCall  go to state 46
    IfElse      go to state 47
    ForLoop     go to state 48
    Print       go to state 49


State 46

   23 Statements: MethodCall . Statements

    T_PRINT  shift, and go to state 39
    T_IF     shift, and go to state 40
    T_FOR    shift, and go to state 41
    T_NAME   shift, and go to state 72

    $default  reduce using rule 27 (Statements)

    Statements  go to state 74
    Assignment  go to state 45
    MethodCall  go to state 46
    IfElse      go to state 47
    ForLoop     go to state 48
    Print       go to state 49


State 47

   24 Statements: IfElse . Statements

    T_PRINT  shift, and go to state 39
    T_IF     shift, and go to state 40
    T_FOR    shift, and go to state 41
    T_NAME   shift, and go to state 72

    $default  reduce using rule 27 (Statements)

    Statements  go to state 75
    Assignment  go to state 45
    MethodCall  go to state 46
    IfElse      go to state 47
    ForLoop     go to state 48
    Print       go to state 49


State 48

   25 Statements: ForLoop . Statements

    T_PRINT  shift, and go to state 39
    T_IF     shift, and go to state 40
    T_FOR    shift, and go to state 41
    T_NAME   shift, and go to state 72

    $default  reduce using rule 27 (Statements)

    Statements  go to state 76
    Assignment  go to state 45
    MethodCall  go to state 46
    IfElse      go to state 47
    ForLoop     go to state 48
    Print       go to state 49


State 49

   26 Statements: Print . Statements

    T_PRINT  shift, and go to state 39
    T_IF     shift, and go to state 40
    T_FOR    shift, and go to state 41
    T_NAME   shift, and go to state 72

    $default  reduce using rule 27 (Statements)

    Statements  go to state 77
    Assignment  go to state 45
    MethodCall  go to state 46
    IfElse      go to state 47
    ForLoop     go to state 48
    Print       go to state 49


State 50

   17 Declaration: Type . T_NAME Declaration_2

    T_NAME  shift, and go to state 78


State 51

   12 Arguments_2: Type T_NAME T_COMMA Arguments_2 .

    $default  reduce using rule 12 (Arguments_2)


State 52

    7 Methods: T_NAME . T_OPEN_PAR Arguments T_CLOSED_PAR T_COLON Type T_OPEN_BRACE Body T_CLOSE_BRACE Methods

    T_OPEN_PAR  shift, and go to state 17


State 53

    7 Methods: T_NAME T_OPEN_PAR Arguments T_CLOSED_PAR T_COLON Type T_OPEN_BRACE Body T_CLOSE_BRACE Methods .

    $default  reduce using rule 7 (Methods)


State 54

   50 Expression: T_MINUS . Expression

    T_MINUS     shift, and go to state 54
    T_NOT       shift, and go to state 55
    T_OPEN_PAR  shift, and go to state 56
    T_INTEGER   shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_NEW       shift, and go to state 60
    T_NAME      shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 79


State 55

   49 Expression: T_NOT . Expression

    T_MINUS     shift, and go to state 54
    T_NOT       shift, and go to state 55
    T_OPEN_PAR  shift, and go to state 56
    T_INTEGER   shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_NEW       shift, and go to state 60
    T_NAME      shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 80


State 56

   54 Expression: T_OPEN_PAR . Expression T_CLOSED_PAR

    T_MINUS     shift, and go to state 54
    T_NOT       shift, and go to state 55
    T_OPEN_PAR  shift, and go to state 56
    T_INTEGER   shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_NEW       shift, and go to state 60
    T_NAME      shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 81


State 57

   55 Expression: T_INTEGER .

    $default  reduce using rule 55 (Expression)


State 58

   56 Expression: T_TRUE .

    $default  reduce using rule 56 (Expression)


State 59

   57 Expression: T_FALSE .

    $default  reduce using rule 57 (Expression)


State 60

   58 Expression: T_NEW . T_NAME
   59           | T_NEW . T_NAME T_OPEN_PAR Parameters T_CLOSED_PAR

    T_NAME  shift, and go to state 82


State 61

   34 MethodCall: T_NAME . T_OPEN_PAR Parameters T_CLOSED_PAR
   35           | T_NAME . T_PERIOD T_NAME T_OPEN_PAR Parameters T_CLOSED_PAR
   51 Expression: T_NAME .
   52           | T_NAME . T_PERIOD T_NAME

    T_OPEN_PAR  shift, and go to state 67
    T_PERIOD    shift, and go to state 83

    $default  reduce using rule 51 (Expression)


State 62

   53 Expression: MethodCall .

    $default  reduce using rule 53 (Expression)


State 63

   39 Print: T_PRINT Expression .
   40 Expression: Expression . T_PLUS Expression
   41           | Expression . T_MINUS Expression
   42           | Expression . T_MULTIPLY Expression
   43           | Expression . T_DIVIDE Expression
   44           | Expression . T_LESS Expression
   45           | Expression . T_LESS_EQUAL Expression
   46           | Expression . T_EQUIVALENT Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression

    T_OR          shift, and go to state 84
    T_AND         shift, and go to state 85
    T_EQUIVALENT  shift, and go to state 86
    T_LESS_EQUAL  shift, and go to state 87
    T_LESS        shift, and go to state 88
    T_MINUS       shift, and go to state 89
    T_PLUS        shift, and go to state 90
    T_DIVIDE      shift, and go to state 91
    T_MULTIPLY    shift, and go to state 92

    $default  reduce using rule 39 (Print)


State 64

   36 IfElse: T_IF Expression . T_OPEN_BRACE Statements_2 T_CLOSE_BRACE
   37       | T_IF Expression . T_OPEN_BRACE Statements_2 T_CLOSE_BRACE T_ELSE T_OPEN_BRACE Statements_2 T_CLOSE_BRACE
   40 Expression: Expression . T_PLUS Expression
   41           | Expression . T_MINUS Expression
   42           | Expression . T_MULTIPLY Expression
   43           | Expression . T_DIVIDE Expression
   44           | Expression . T_LESS Expression
   45           | Expression . T_LESS_EQUAL Expression
   46           | Expression . T_EQUIVALENT Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression

    T_OR          shift, and go to state 84
    T_AND         shift, and go to state 85
    T_EQUIVALENT  shift, and go to state 86
    T_LESS_EQUAL  shift, and go to state 87
    T_LESS        shift, and go to state 88
    T_MINUS       shift, and go to state 89
    T_PLUS        shift, and go to state 90
    T_DIVIDE      shift, and go to state 91
    T_MULTIPLY    shift, and go to state 92
    T_OPEN_BRACE  shift, and go to state 93


State 65

   33 Assignment: T_NAME . T_EQUAL Expression

    T_EQUAL  shift, and go to state 68


State 66

   38 ForLoop: T_FOR Assignment . T_SEMICOLON Expression T_SEMICOLON Assignment T_OPEN_BRACE Statements T_CLOSE_BRACE

    T_SEMICOLON  shift, and go to state 94


State 67

   34 MethodCall: T_NAME T_OPEN_PAR . Parameters T_CLOSED_PAR

    T_MINUS     shift, and go to state 54
    T_NOT       shift, and go to state 55
    T_OPEN_PAR  shift, and go to state 56
    T_INTEGER   shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_NEW       shift, and go to state 60
    T_NAME      shift, and go to state 61

    $default  reduce using rule 61 (Parameters)

    MethodCall    go to state 62
    Expression    go to state 95
    Parameters    go to state 96
    Parameters_2  go to state 97


State 68

   33 Assignment: T_NAME T_EQUAL . Expression

    T_MINUS     shift, and go to state 54
    T_NOT       shift, and go to state 55
    T_OPEN_PAR  shift, and go to state 56
    T_INTEGER   shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_NEW       shift, and go to state 60
    T_NAME      shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 98


State 69

   35 MethodCall: T_NAME T_PERIOD . T_NAME T_OPEN_PAR Parameters T_CLOSED_PAR

    T_NAME  shift, and go to state 99


State 70

   20 Return: T_RETURN . Expression

    T_MINUS     shift, and go to state 54
    T_NOT       shift, and go to state 55
    T_OPEN_PAR  shift, and go to state 56
    T_INTEGER   shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_NEW       shift, and go to state 60
    T_NAME      shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 100


State 71

   14 Body: Declarations Statements Return .

    $default  reduce using rule 14 (Body)


State 72

   33 Assignment: T_NAME . T_EQUAL Expression
   34 MethodCall: T_NAME . T_OPEN_PAR Parameters T_CLOSED_PAR
   35           | T_NAME . T_PERIOD T_NAME T_OPEN_PAR Parameters T_CLOSED_PAR

    T_OPEN_PAR  shift, and go to state 67
    T_EQUAL     shift, and go to state 68
    T_PERIOD    shift, and go to state 69


State 73

   22 Statements: Assignment Statements .

    $default  reduce using rule 22 (Statements)


State 74

   23 Statements: MethodCall Statements .

    $default  reduce using rule 23 (Statements)


State 75

   24 Statements: IfElse Statements .

    $default  reduce using rule 24 (Statements)


State 76

   25 Statements: ForLoop Statements .

    $default  reduce using rule 25 (Statements)


State 77

   26 Statements: Print Statements .

    $default  reduce using rule 26 (Statements)


State 78

   17 Declaration: Type T_NAME . Declaration_2

    T_COMMA  shift, and go to state 101

    $default  reduce using rule 19 (Declaration_2)

    Declaration_2  go to state 102


State 79

   40 Expression: Expression . T_PLUS Expression
   41           | Expression . T_MINUS Expression
   42           | Expression . T_MULTIPLY Expression
   43           | Expression . T_DIVIDE Expression
   44           | Expression . T_LESS Expression
   45           | Expression . T_LESS_EQUAL Expression
   46           | Expression . T_EQUIVALENT Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression
   50           | T_MINUS Expression .

    $default  reduce using rule 50 (Expression)


State 80

   40 Expression: Expression . T_PLUS Expression
   41           | Expression . T_MINUS Expression
   42           | Expression . T_MULTIPLY Expression
   43           | Expression . T_DIVIDE Expression
   44           | Expression . T_LESS Expression
   45           | Expression . T_LESS_EQUAL Expression
   46           | Expression . T_EQUIVALENT Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression
   49           | T_NOT Expression .

    $default  reduce using rule 49 (Expression)


State 81

   40 Expression: Expression . T_PLUS Expression
   41           | Expression . T_MINUS Expression
   42           | Expression . T_MULTIPLY Expression
   43           | Expression . T_DIVIDE Expression
   44           | Expression . T_LESS Expression
   45           | Expression . T_LESS_EQUAL Expression
   46           | Expression . T_EQUIVALENT Expression
   47           | Expression . T_AND Expression
   48           | Expression . T_OR Expression
   54           | T_OPEN_PAR Expression . T_CLOSED_PAR

    T_OR          shift, and go to state 84
    T_AND         shift, and go to state 85
    T_EQUIVALENT  shift, and go to state 86
    T_LESS_EQUAL  shift, and go to state 87
    T_LESS        shift, and go to state 88
    T_MINUS       shift, and go to state 89
    T_PLUS        shift, and go to state 90
    T_DIVIDE      shift, and go to state 91
    T_MULTIPLY    shift, and go to state 92
    T_CLOSED_PAR  shift, and go to state 103


State 82

   58 Expression: T_NEW T_NAME .
   59           | T_NEW T_NAME . T_OPEN_PAR Parameters T_CLOSED_PAR

    T_OPEN_PAR  shift, and go to state 104

    $default  reduce using rule 58 (Expression)


State 83

   35 MethodCall: T_NAME T_PERIOD . T_NAME T_OPEN_PAR Parameters T_CLOSED_PAR
   52 Expression: T_NAME T_PERIOD . T_NAME

    T_NAME  shift, and go to state 105


State 84

   48 Expression: Expression T_OR . Expression

    T_MINUS     shift, and go to state 54
    T_NOT       shift, and go to state 55
    T_OPEN_PAR  shift, and go to state 56
    T_INTEGER   shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_NEW       shift, and go to state 60
    T_NAME      shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 106


State 85

   47 Expression: Expression T_AND . Expression

    T_MINUS     shift, and go to state 54
    T_NOT       shift, and go to state 55
    T_OPEN_PAR  shift, and go to state 56
    T_INTEGER   shift, and go to state 57
    T_TRUE      shift, and go to state 58
    T_FALSE     shift, and go to state 59
    T_NEW       shift, and go to state 60
    T_NAME      shift, and go to state 61

    MethodCall  go to state 62
    Expression  go to state 107

